public enum CharacterActionState
{
    Idle,
    Moving,
    Attacking,
    Stagger,
    Blocking,
    Parrying,
    Dodge,
    Dead
}