using UnityEngine;

[CreateAssetMenu(fileName = "ItemSo", menuName = "ItemSo", order = 0)]
public class ItemSo : ScriptableObject
{
    public new string name;
    public GameObject prefab;
}