@startuml

package Enums {
  enum CharacterActionState
  {
      Idle,
      Moving,
      Attacking,
      Stagger,
      Blocking,
      Parrying,
      Dodge,
      Dead
  }
}

package interfaces
{
  interface IDamageable
  {
      void TakeDamage(float amount);
  }
  interface IKnockbackable
  {
      void ApplyKnockback(Character attacker, float force);
  }
  interface IUsable
  {
      void Use(Character user, string binding);
      IEnumerable<string> GetBindings();
  }
}

package Services
{
  class CombatService
  {
      void ResolveAttack(Character attacker, IDamageable target, AttackSO attack, WeaponSO weapon)
      float CalculateDamage(Character attacker, AttackSO attack, WeaponSO weapon)
      float CalculateKnockback(AttackSO attack, WeaponSO weapon)
  }
}

package SO
{
  class AttackSetSO
  {
      string binding;
      List<AttackSO> attacks;
  }
  class AttackSO 
  {
     AnimationClip clip;
     float damage;
     float knockback;
     bool canBeBlocked;
     bool canBeParried;
     List<StatusEffectSO> appliedEffects;
  }
  class CharacterStatsSO
  {
     float baseHealth;
     float baseStamina;
     float baseAttackDamage;
     float resistances;
  }
  class ItemSo
  {
    string name;
     GameObject prefab;
  }
  abstract class StatusEffectSO
  {
     string effectName;
     float duration;
     abstract void ApplyEffect(Character target);
     abstract void RemoveEffect(Character target);
  }
  class WeaponSO
  {
     flaot baseDamage;
     float baseKnockback;
     float staminaCost;
     List<AttackSetSO> attacks;
  }
  WeaponSO <|-- ItemSo
  WeaponSO *-- AttackSetSO
  AttackSetSO *-- AttackSO
  AttackSO *-- StatusEffectSO
}

abstract class Character
{
    CharacterStatsSO Stats;
    CharacterActionState ActionState;
    abstract void ApplyEffects(StatusEffectSO effect);
}

class Player
{
    IUsable itemInHand;

    void ApplyEffects(StatusEffectSO effect);
    void ApplyKnockback(Character attacker, float force);
    void TakeDamage(float amount);
}

class Weapon
{
    WeaponSO weaponData;

    IEnumerable<string> GetBindings();
    Use(Character user, string binding);
}

Character <-- CharacterStatsSO
Character <-- CharacterActionState

Player <|-- Character
Player <|.. IDamageable
Player <|.. IKnockbackable
Player <-- Weapon

Weapon <-- CombatService
Weapon <|.. IUsable
Weapon <-- WeaponSO

@enduml